12.8
-----
* Stats Insights: New two-column layout for This Year stats.
* Stats Insights: New two-column layout for Most Popular Time stats.

12.7
-----
* Block Editor: Video, Quote and More blocks are available now.
* Block Editor: Copy/Paste of text with attributes( bold, italic, ...) will be respected on the editor.
* Block Editor: Updated color scheme.
* Block Editor: Nested lists are now available on the toolbar.
* Post Settings: Setting a Featured Image on a Post/Site should now work better in poor netowrk conditions.
* Stats Insights: New two-column layout for All-Time stats.
* Stats Insights: New two-column layout for Today stats.

12.6
-----
* Block Editor: Added UI to display a warning when a block has invalid content.
* Block Editor: Fixed issue with link settings where “Open in New Tab” was always OFF on open.
* Removed the limit of number of photos that can be shared from other apps.
* Account Settings Primary Site now shows the site domain if the site has no name.
* The app now launches a bit more quickly.
* Added a list of third-party library acknowledgements.
* Updated messaging experience for a reply upload result.

12.5
-----
* Fixed Notices sometimes showing behind the keyboard
* Implemented Domain Credit feature
* Implemented auto saving a post on preview  
* The app now launches a bit more quickly.
* Fixed broken images in posts created by the share extension.
* Deprecated local previews

12.4
-----
* You can now mark notifications as unread with just a swipe.
* Fixed crash when searching Free Photo Library.
* Better URL validation when logging in with a self hosted site.
* Account Settings Primary Site now shows the site URL if the site has no name.
* Implemented incremental improvements to accessibility experience across the app.
* Updated error message when tag loading failed.

12.3
-----
* Images are now imported from TextBundle and TextPack files shared from other apps
* Added support for importing Markdown files shared from other apps