@@ -1,5 +1,6 @@
 12.8
 -----
+* Updated copy for preview unavailable screen
 * Stats Insights: New two-column layout for This Year stats.
 * Stats Insights: New two-column layout for Most Popular Time stats.
 
